--- a/man/RBMRB.html
+++ b/man/RBMRB.html
@@ -70,7 +70,7 @@ img {
 
 <div id="rbmrb" class="section level1">
 <h1>RBMRB</h1>
-<p>RBMRB is an API written in R to import chemical shift data directly from <a href="http://bmrb.wisc.edu/">BMRB</a> into R environment as a data frame in R. This will facilitate easy access to BMRB data for statistical analysis and data visualization.</p>
+<p>RBMRB is an API written in R to import chemical shift data directly from <a href="http://bmrb.wisc.edu/">BMRB</a> into R environment as a data frame in R. This facilitates access to BMRB data for statistical analysis and data visualization.</p>
 <div id="installation" class="section level2">
 <h2>Installation</h2>
 <div id="requirements" class="section level3">
