--- a/man/RBMRB.html
+++ b/man/RBMRB.html
@@ -131,7 +131,13 @@ $(document).ready(function () {
 <div id="requirements" class="section level3">
 <h3>Requirements</h3>
 <p>RBMRB library is developed and tested in R version 3.3. It requires the following R packages</p>
-<p><strong>data.table</strong> to import data from BMRB web server <strong>httr</strong> to format the imported data into a data frame in R. <strong>rjson</strong> to deal with BMRB-API <strong>ggplot2</strong> to simulate spectra <strong>plotly</strong> for interactive graphics in simulated spectra</p>
+<ul>
+<li><strong>httr</strong> to import data from BMRB web server</li>
+<li><strong>data.table</strong> to format the imported data into a data frame in R.</li>
+<li><strong>rjson</strong> to deal with BMRB-API</li>
+<li><strong>ggplot2</strong> to simulate spectra</li>
+<li><strong>plotly</strong> for interactive graphics in simulated spectra</li>
+</ul>
 <p>Users should ensure the proper installtion of above packages, before proceeding to RMBRM insallation.</p>
 <p>Here is the instruction to install those packages. Open your R and use the following command</p>
 <p>Once the necessary packages has been installed, the source file can be downloaded from GitHub. Source package can be downloaded from this <a href="https://github.com/uwbmrb/RBMRB/raw/master/RBMRB_1.0.tar.gz">link</a></p>
